--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -11,10 +11,16 @@
 }
 
 .main-img-box {
+  width: 100%;
   height: 800px;
   background-image: url(../assets/main_bus1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   overflow: hidden;
+}
+
+.time-search {
+  margin-bottom: 20px;
+  height: 800px;
 }/*# sourceMappingURL=main.css.map */
