--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -11,7 +11,7 @@
   }
   
 .main-img-box{
-    // width: 1200px;
+    width: 100%;
     height: 800px;
     background-image: url(../assets/main_bus1.jpg);
     background-repeat: no-repeat;
@@ -20,13 +20,7 @@
     overflow: hidden;
 }
 
-// .facilityInfo{
-//   h4{
-//     margin-top: 20px;
-//     color: rgba($color: #0175e2, $alpha: 1.0);
-//     font-size: 20px;
-//   }
-//   img{
-//     margin-bottom: 30px;
-//   }
-// }
+.time-search{
+  margin-bottom: 20px;
+  height: 800px;
+}
