--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -11,16 +11,11 @@
 }
 
 .main-img-box {
-  width: 100%;
-  height: 800px;
-  background-image: url(../assets/main_bus1.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  overflow: hidden;
+  width: 80%;
+  flex: none;
 }
 
 .time-search {
   margin-bottom: 20px;
-  height: 800px;
+  height: 70%;
 }/*# sourceMappingURL=main.css.map */
