--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -11,16 +11,17 @@
   }
   
 .main-img-box{
-    width: 100%;
-    height: 800px;
-    background-image: url(../assets/main_bus1.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;
+    width: 80%;
+    flex: none;
+    // height: 800px;
+    // background-image: url(../assets/main_bus1.jpg);
+    // background-repeat: no-repeat;
+    // background-position: center;
+    // background-size: cover;
+    // overflow: hidden;
 }
 
 .time-search{
   margin-bottom: 20px;
-  height: 800px;
+  height: 70%;
 }
