--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -1,3 +1,13 @@
+html {
+  position: relative;
+  min-height: 100%;
+  margin: 0;
+}
+
+body {
+  min-height: 100%;
+}
+
 .container {
     width: 1200px;
     h4{
@@ -9,19 +19,83 @@
       margin-bottom: 30px;
     }
   }
+
+  .main-container{
+
+  }
+  .main-footer{
+    width: 100%;
+    text-align: center;
+  }
   
+  .home-img{
+    height: 100%;
+  }
+
 .main-img-box{
     width: 80%;
     flex: none;
-    // height: 800px;
-    // background-image: url(../assets/main_bus1.jpg);
-    // background-repeat: no-repeat;
-    // background-position: center;
-    // background-size: cover;
-    // overflow: hidden;
+}
+
+.facility-info-img{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .time-search{
   margin-bottom: 20px;
   height: 70%;
+}
+
+.notice-board-top{
+  margin-top: 50px;
+  text-align: center;
+}
+
+.notice-board-title{
+  color: skyblue;
+  font-size: 30px;
+}
+
+
+.project-tab {
+  padding: 10%;
+  margin-top: -8%;
+}
+.project-tab #tabs{
+  background: #007b5e;
+  color: #eee;
+}
+.project-tab #tabs h6.section-title{
+  color: #eee;
+}
+.project-tab #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  color: #0062cc;
+  background-color: transparent;
+  border-color: transparent transparent #f3f3f3;
+  border-bottom: 3px solid !important;
+  font-size: 16px;
+  font-weight: bold;
+}
+.project-tab .nav-link {
+  border: 1px solid transparent;
+  border-top-left-radius: .25rem;
+  border-top-right-radius: .25rem;
+  color: #0062cc;
+  font-size: 16px;
+  font-weight: 600;
+}
+.project-tab .nav-link:hover {
+  border: none;
+}
+.project-tab thead{
+  background: #f3f3f3;
+  color: #333;
+}
+.project-tab a{
+  text-decoration: none;
+  color: #333;
+  font-weight: 600;
 }
